Fix menu overflow on low-height mobiles, adjust flex-basis in top five promoted for mobiles

--- a/css/styles.css
+++ b/css/styles.css
@@ -2394,12 +2394,18 @@ twitterwidget {
   top: 0;
   width: 100%;
   background-color: rgba(245, 245, 245, 0.95);
+  z-index: 10;
 }
 
 @media (min-width: 768px) {
   .nav-group-mobile {
     display: none;
   }
+}
+
+.nav-group-mobile.toggled-on {
+  overflow: scroll;
+  height: 100vh;
 }
 
 .nav-group-mobile .logo img {
@@ -2791,21 +2797,21 @@ figcaption a:visited {
   }
 }
 
-.view-front-page-two-main .view-content, .view-front-page-media-first .view-content, .view-display-id-front_page_two_main .view-content, .view-display-id-front_page_three_main .view-content {
+.view-front-page-two-main .view-content, .view-front-page-media-first .view-content, .view-display-id-front_page_two_main .view-content {
   display: -webkit-box;
   display: flex;
   flex-wrap: nowrap;
 }
 
-.view-front-page-two-main .view-content .views-row, .view-front-page-media-first .view-content .views-row, .view-display-id-front_page_two_main .view-content .views-row, .view-display-id-front_page_three_main .view-content .views-row {
-  flex-basis: 300px;
+.view-front-page-two-main .view-content .views-row, .view-front-page-media-first .view-content .views-row, .view-display-id-front_page_two_main .view-content .views-row {
+  flex-basis: 250px;
 }
 
-.view-front-page-two-main .view-content .views-row .itemLink, .view-front-page-media-first .view-content .views-row .itemLink, .view-display-id-front_page_two_main .view-content .views-row .itemLink, .view-display-id-front_page_three_main .view-content .views-row .itemLink {
+.view-front-page-two-main .view-content .views-row .itemLink, .view-front-page-media-first .view-content .views-row .itemLink, .view-display-id-front_page_two_main .view-content .views-row .itemLink {
   color: white;
 }
 
-.view-front-page-two-main .view-content .views-row .itemWrapper, .view-front-page-media-first .view-content .views-row .itemWrapper, .view-display-id-front_page_two_main .view-content .views-row .itemWrapper, .view-display-id-front_page_three_main .view-content .views-row .itemWrapper {
+.view-front-page-two-main .view-content .views-row .itemWrapper, .view-front-page-media-first .view-content .views-row .itemWrapper, .view-display-id-front_page_two_main .view-content .views-row .itemWrapper {
   position: relative;
   height: 22em;
   background-position: center;
@@ -2813,7 +2819,7 @@ figcaption a:visited {
   transition: all 0.2s;
 }
 
-.view-front-page-two-main .view-content .views-row .itemTitle, .view-front-page-media-first .view-content .views-row .itemTitle, .view-display-id-front_page_two_main .view-content .views-row .itemTitle, .view-display-id-front_page_three_main .view-content .views-row .itemTitle {
+.view-front-page-two-main .view-content .views-row .itemTitle, .view-front-page-media-first .view-content .views-row .itemTitle, .view-display-id-front_page_two_main .view-content .views-row .itemTitle {
   position: absolute;
   bottom: 0rem;
   left: 1em;
@@ -2823,13 +2829,13 @@ figcaption a:visited {
   pointer-events: none;
 }
 
-.view-front-page-two-main .view-content .views-row .itemTitle .itemTitleText, .view-front-page-media-first .view-content .views-row .itemTitle .itemTitleText, .view-display-id-front_page_two_main .view-content .views-row .itemTitle .itemTitleText, .view-display-id-front_page_three_main .view-content .views-row .itemTitle .itemTitleText {
+.view-front-page-two-main .view-content .views-row .itemTitle .itemTitleText, .view-front-page-media-first .view-content .views-row .itemTitle .itemTitleText, .view-display-id-front_page_two_main .view-content .views-row .itemTitle .itemTitleText {
   background-color: rgba(34, 34, 34, 0.9);
   color: white;
   font-weight: bold;
 }
 
-.view-front-page-two-main .view-content .views-row .fp_categoryLink, .view-front-page-media-first .view-content .views-row .fp_categoryLink, .view-display-id-front_page_two_main .view-content .views-row .fp_categoryLink, .view-display-id-front_page_three_main .view-content .views-row .fp_categoryLink {
+.view-front-page-two-main .view-content .views-row .fp_categoryLink, .view-front-page-media-first .view-content .views-row .fp_categoryLink, .view-display-id-front_page_two_main .view-content .views-row .fp_categoryLink {
   display: table;
   text-decoration: none;
   background-color: #ef5223;
@@ -2840,7 +2846,7 @@ figcaption a:visited {
   pointer-events: initial;
 }
 
-.view-front-page-two-main .view-content .views-row .fp_categoryLink:hover, .view-front-page-media-first .view-content .views-row .fp_categoryLink:hover, .view-display-id-front_page_two_main .view-content .views-row .fp_categoryLink:hover, .view-display-id-front_page_three_main .view-content .views-row .fp_categoryLink:hover {
+.view-front-page-two-main .view-content .views-row .fp_categoryLink:hover, .view-front-page-media-first .view-content .views-row .fp_categoryLink:hover, .view-display-id-front_page_two_main .view-content .views-row .fp_categoryLink:hover {
   color: white;
   text-decoration: underline;
 }
@@ -2867,6 +2873,10 @@ figcaption a:visited {
   text-decoration: underline;
 }
 
+.view-display-id-front_page_three_main .views-row {
+  flex-basis: 180px !important;
+}
+
 .view-front-page-three-main, .view-display-id-front_page_three_main {
   margin: 0.5em;
 }
@@ -2881,6 +2891,12 @@ figcaption a:visited {
   top: 1em;
   left: 1em;
   background-color: #ef5223;
+}
+
+@media (max-width: 768px) {
+  .view-front-page-three-main .views-row .views-field-field-category, .view-display-id-front_page_three_main .views-row .views-field-field-category {
+    display: none;
+  }
 }
 
 .view-front-page-three-main .views-row .views-field-field-category a, .view-display-id-front_page_three_main .views-row .views-field-field-category a {
