--- a/sass/sections/navigation.scss
+++ b/sass/sections/navigation.scss
@@ -162,6 +162,11 @@
   top: 0;
   width: 100%;
   background-color: transparentize($ctvwhite, 0.05);
+  z-index: 10;
+  &.toggled-on {
+    overflow: scroll;
+    height: 100vh;
+  }
   & .logo {
     & img {
       height: 3em;
